--- a/package.json
+++ b/package.json
@@ -4,19 +4,85 @@
   "description": "SDK contains the business logic and application state of countries demo app",
   "main": "index.js",
   "scripts": {
-    "dev": ""
+    "dev": "node start.js",
+    "build": "babel ./src -d ./lib --ignore '**/*.test.js'"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ahmadpx/ftt-countries-sdk.git"
   },
   "keywords": [
-    "SDK"
+    "SDK",
+    "State management",
+    "Mobx"
   ],
   "author": "ahmadpx@hotmail.com",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/ahmadpx/ftt-countries-sdk/issues"
   },
-  "homepage": "https://github.com/ahmadpx/ftt-countries-sdk#readme"
+  "homepage": "https://github.com/ahmadpx/ftt-countries-sdk#readme",
+  "peerDependencies": {
+    "lodash": "4.17.15",
+    "mobx": "4.9.4",
+    "mobx-utils": "5.4.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "7.4.3",
+    "@babel/core": "7.4.3",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
+    "@babel/plugin-proposal-object-rest-spread": "7.4.3",
+    "@babel/plugin-transform-runtime": "7.4.3",
+    "@babel/preset-env": "^7.6.0",
+    "@hapi/joi": "15.1.1",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-jest": "24.7.1",
+    "babel-loader": "8.0.5",
+    "babel-plugin-module-resolver": "3.2.0",
+    "babel-preset-mobx": "2.0.0",
+    "child_process": "1.0.2",
+    "colors": "^1.3.3",
+    "prettier": "1.16.4",
+    "watch": "^1.0.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "lint-staged": {
+    "packages/**/src/**/*.js": [
+      "eslint --fix",
+      "prettier --config ./.prettierrc --write",
+      "git add"
+    ]
+  },
+  "jest": {
+    "rootDir": "./",
+    "verbose": true,
+    "moduleDirectories": [
+      "node_modules",
+      "src"
+    ],
+    "transform": {
+      "^.+\\.js$": "babel-jest"
+    },
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/lib/"
+    ],
+    "transformIgnorePatterns": [
+      "/node_modules/",
+      "/lib/"
+    ],
+    "testEnvironment": "node"
+  },
+  "files": [
+    "lib",
+    "package.json",
+    "LICENSE",
+    "README.md"
+  ]
 }
