--- a/package.json
+++ b/package.json
@@ -43,8 +43,13 @@
     "babel-preset-mobx": "2.0.0",
     "child_process": "1.0.2",
     "colors": "^1.3.3",
+    "lint-staged": "8.1.5",
+    "lodash": "4.17.15",
+    "mobx": "4.9.4",
+    "mobx-utils": "5.4.0",
     "prettier": "1.16.4",
-    "watch": "^1.0.2"
+    "watch": "^1.0.2",
+    "webpack": "^4.40.2"
   },
   "husky": {
     "hooks": {
@@ -53,8 +58,7 @@
     }
   },
   "lint-staged": {
-    "packages/**/src/**/*.js": [
-      "eslint --fix",
+    "src/**/*.js": [
       "prettier --config ./.prettierrc --write",
       "git add"
     ]
