--- a/package.json
+++ b/package.json
@@ -27,6 +27,11 @@
     "mobx": "4.9.4",
     "mobx-utils": "5.4.0"
   },
+  "dependencies": {
+    "lodash": "4.17.15",
+    "mobx": "4.9.4",
+    "mobx-utils": "5.4.0"
+  },
   "devDependencies": {
     "@babel/cli": "7.4.3",
     "@babel/core": "7.4.3",
@@ -44,9 +49,6 @@
     "child_process": "1.0.2",
     "colors": "^1.3.3",
     "lint-staged": "8.1.5",
-    "lodash": "4.17.15",
-    "mobx": "4.9.4",
-    "mobx-utils": "5.4.0",
     "prettier": "1.16.4",
     "watch": "^1.0.2",
     "webpack": "^4.40.2"
