--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
   },
   "homepage": "https://github.com/ahmadpx/ftt-countries-sdk#readme",
   "peerDependencies": {
+    "axios": "0.19.0",
     "lodash": "4.17.15",
     "mobx": "4.9.4",
     "mobx-utils": "5.4.0"
   },
   "dependencies": {
+    "axios": "0.19.0",
     "lodash": "4.17.15",
     "mobx": "4.9.4",
     "mobx-utils": "5.4.0"
