--- a/package.json
+++ b/package.json
@@ -47,10 +47,12 @@
     "@babel/plugin-proposal-object-rest-spread": "7.4.3",
     "@babel/plugin-transform-runtime": "7.4.3",
     "@babel/preset-env": "^7.6.0",
+    "@babel/preset-flow": "^7.0.0",
     "@hapi/joi": "15.1.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "24.7.1",
     "babel-loader": "8.0.5",
+    "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-module-resolver": "3.2.0",
     "babel-preset-mobx": "2.0.0",
     "child_process": "1.0.2",
