--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "babel-preset-mobx": "2.0.0",
     "child_process": "1.0.2",
     "colors": "^1.3.3",
+    "jest": "^24.9.0",
     "lint-staged": "8.1.5",
     "prettier": "1.16.4",
     "watch": "^1.0.2",
